# NeurInk

./: .gitignore  =0.20.0  README.md  TODO.md  advanced_demo.py  advanced_showcase.html  example.py  example_v2.1.py  example_v2.py  package.json  pyproject.toml  refactoring_showcase.html  refactoring_validation.py  showcase.html  simple_validation.py  test_advanced_layout.py  test_new_features.py  test_nnsvg.py  visual_inspection.html  visual_test.html
PRD/: basic_prd.md  prd.md
backend/: package-lock.json  package.json
backend/src/: server.js
docs/: DSL.md  TUTORIAL.md  latex-integration.md  markup-language.md  theme-customization.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: DiagramCanvas.tsx  Header.tsx  MarkupEditor.tsx  Sidebar.tsx
frontend/src/context/: DiagramContext.tsx
frontend/src/utils/: markupParser.ts
neurink/: __init__.py  advanced_renderer.py  blocks.py  diagram.py  graph.py  layer.py  layout.py  parser.py  professional_renderer.py  renderer.py  templates.py  themes.py  utils.py
tests/: __init__.py  test_block_templates.py  test_diagram.py  test_parser.py  test_renderer.py  test_templates.py  test_themes.py  test_visual_annotations.py
