[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurink"
version = "0.1.0"
description = "Publication-quality neural network diagram generation library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NeurInk Contributors", email = "contributors@neurink.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["neural networks", "visualization", "diagrams", "svg", "machine learning"]
requires-python = ">=3.8"
dependencies = [
    "lark>=1.1.0",
    "svglib>=1.5.0",
    "reportlab>=3.6.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
gui = [
    "streamlit>=1.20.0",
    "gradio>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/amanasci/NeurInk"
Documentation = "https://github.com/amanasci/NeurInk/docs"
Repository = "https://github.com/amanasci/NeurInk"
Issues = "https://github.com/amanasci/NeurInk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurink*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true